--- a/include/gz/gui/config.hh.in
+++ b/include/gz/gui/config.hh.in
@@ -27,6 +27,7 @@
 
 #define GZ_GUI_VERSION "${PROJECT_VERSION}"
 #define GZ_GUI_VERSION_FULL "${PROJECT_VERSION_FULL}"
+#define GZ_GUI_VERSION_NAMESPACE v${PROJECT_VERSION_MAJOR}
 
 #define GZ_GUI_VERSION_HEADER "Gazebo GUI, version ${PROJECT_VERSION_FULL}\nCopyright (C) 2017 Open Source Robotics Foundation.\nReleased under the Apache 2.0 License.\n\n"
 
