--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -117,6 +117,7 @@ endfunction()
 add_subdirectory(camera_fps)
 add_subdirectory(camera_tracking)
 add_subdirectory(follow_config)
+add_subdirectory(track_config)
 add_subdirectory(grid_config)
 add_subdirectory(image_display)
 add_subdirectory(interactive_view_control)
